<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_32sdp"
        android:src="@drawable/newlogo" />


    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/purple_500"
        app:indicatorSize="@dimen/_22sdp"
        app:trackThickness="@dimen/_2sdp" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appName"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/opps"
        android:textColor="@color/color_primary" />

    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome"
        android:layout_marginStart="@dimen/_16sdp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/passwordf"
        android:textColor="@color/color_primary" />


    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/back"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/email"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailText"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:inputType="textEmailAddress" />


    <TextView
        android:id="@+id/clicking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_email"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="By clicking on" />


    <TextView
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_email"
        android:layout_marginStart="4dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_toRightOf="@id/clicking"
        android:fontFamily="@font/open_sans_semibold"
        android:text="Send"
        android:textColor="@color/color_primary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_email"
        android:layout_marginStart="4dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_toRightOf="@id/send"
        android:fontFamily="@font/open_sans_semibold"
        android:text="button" />


    <TextView
        android:id="@+id/e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/send"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/open_sans_semibold"

        android:text="An reset password email will send to your" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/send"
        android:layout_marginStart="4dp"
        android:layout_marginTop="@dimen/_8sdp"

        android:layout_toRightOf="@id/e"
        android:fontFamily="@font/open_sans_semibold"
        android:text="Email."
        android:textColor="@color/color_primary" />

    <Button
        android:id="@+id/sendBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_8sdp"

        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/send"
        android:textColor="@color/white" />
</RelativeLayout>